--- a/index.html
+++ b/index.html
@@ -1,12 +1,51 @@
 ---
-layout: default
+layout: home
 ---
 
 <div class="home">
+  <div class="wrapper">
+    <h1 class="page-heading">
+      Get more carp on the bank with the carpcapture app.
+    </h1>
+  </div>
 
-  <h1 class="page-heading">Posts</h1>
+  <section class="features wrapper">
+    <div class="grid">
+      <div class="col-1-3">
+        <h2>Predict</h2>
+        <p>
+          We use the latest technology to combine weather conditions,
+          lake topography and past captures to help you get on the fish.
+        </p>
+      </div>
+      <div class="col-1-3">
+        <h2>Report</h2>
+        <p>
+          Keep a record of your captures and we’ll help you analyse
+          what spots are working well for you.
+        </p>
+      </div>
+      <div class="col-1-3">
+        <h2>Share</h2>
+        <p>
+          Caught a chunk? Share on social media to make sure
+          your friends know how well you’re doing.
+        </p>
+      </div>
+    </div>
+  </section>
 
-
-
-
+  <section class="app-screenshot">
+    <div class="wrapper">
+      <div class="grid">
+        <div class="col-1-3">
+          <h1>Catch more carp</h1>
+          <p>iOS and Andriod apps comming soon...</p>
+        </div>
+        <div class="col-2-3">
+          <img src="assets/images/app-screenshot.png">
+        </div>
+      </div>
+    </div>
+  </section>
 </div>
